--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
 <li><p>Wuhan Youth Science &amp; Technology Plan
 </p>
 </li>
-<li><p>Industrial Partners (Tencent, Huawei, DFM, etc.)
+<li><p>Industrial Partners (Tencent, Huawei, etc.)
 </p>
 </li>
 </ul>
