--- a/students.html
+++ b/students.html
@@ -30,13 +30,19 @@
 </div>
 <h2>Current PhD students</h2>
 <ul>
+<li><p>Han Zhu (2020 -)
+</p>
+</li>
+<li><p>Jiayi Xie (2021 -)
+</p>
+</li>
 <li><p>Huairui Wang (2021 - )
 </p>
 </li>
 <li><p>Hongchen Wei (2023 -)
 </p>
 </li>
-<li><p>Jiayi Xie (2021 -)
+<li><p>Yuantong Zhang (2023 -)
 </p>
 </li>
 <li><p>Jing Yi (2020 -)
@@ -45,10 +51,7 @@
 <li><p>Junxi Zhang (2022 -)
 </p>
 </li>
-<li><p>Yuantong Zhang (2023 -)
-</p>
-</li>
-<li><p>Han Zhu (2020 -)
+<li><p>Wenzhuo Ma (2024 -)
 </p>
 </li>
 </ul>
