--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ Office: Rm. 420, No.5 Building, Info. Sciences Campus, Wuhan University, China
 <h2>Announcement</h2>
 <p>[International Research Opportunities] In collaborations with <a href="https://www.ntu-cap.org/" target=&ldquo;blank&rdquo;>CAP research group</a> of Nanyang Technological University, Singapore, we are seeking qualified Postdoctoral research fellows, Ph.D. students, and undergraduate research interns, to work on Interpretable Machine Learning.
 </p>
-<p>[Ph.D. Positions, updated on 2023/09/11] There is no vacancy, please do not send email for enquiry.
+<p>[Ph.D. Application, updated on 2023/10/01] For applications, please send your application via: <a href="https://docs.qq.com/form/page/DQllCRExkYXJseVZk" target=&ldquo;blank&rdquo;>Ph.D. Applications</a>.
 </p>
-<p>[M.Sc./M.Eng Positions, updated on 2023/09/11] For applications, please send your application via: <a href="https://docs.qq.com/form/page/DQkhvc2dBdWJLY1pW" target=&ldquo;blank&rdquo;>MSc/MEng Applications</a>.
+<p>[M.Sc./M.Eng Application, updated on 2023/10/01] For applications, please send your application via: <a href="https://docs.qq.com/form/page/DQkZ3eXhRVHNFTVpr" target=&ldquo;blank&rdquo;>MSc/MEng Applications</a>.
 </p>
 <p>[UROP, all-year-round] For Undergraduate Research Opportunities Program applications, please send your application via: <a href="https://docs.qq.com/form/page/DQlFXanBiVkp1TGxC" target=&ldquo;blank&rdquo;>UROP Applications</a>.</p>
 <div id="footer">
