--- a/students.html
+++ b/students.html
@@ -33,7 +33,7 @@
 <li><p>Han Zhu (2020 -)
 </p>
 </li>
-<li><p>Jiayi Xie (2021 -)
+<li><p>Jiayi Xie (2021 - , co-supervised with Prof. Gao Cong, NTU)
 </p>
 </li>
 <li><p>Huairui Wang (2021 - )
@@ -45,7 +45,7 @@
 <li><p>Yuantong Zhang (2023 -)
 </p>
 </li>
-<li><p>Jing Yi (2020 -)
+<li><p>Jing Yi (2020 - , co-supervised with Prof. Yonggang Wen, NTU)
 </p>
 </li>
 <li><p>Junxi Zhang (2022 -)
@@ -75,7 +75,7 @@
 <li><p>Wei Wu (2021), Alibaba
 </p>
 </li>
-<li><p>Xiaoying Ding (2021), Zhongnan University of Economics and Law
+<li><p>Xiaoying Ding (2021, co-supervised with Prof. Weisi Lin, NTU), Zhongnan University of Economics and Law
 </p>
 </li>
 <li><p>Zizheng Liu (2021), Tencent
@@ -87,7 +87,7 @@
 <li><p>Yangjun Ou (2021), Wuhan Textile University
 </p>
 </li>
-<li><p>Aoqi Li (2022), The University of Manchester
+<li><p>Aoqi Li (2022, co-supervised with Prof. Jeremy M. Wolfe, Harvard U. and Prof. Christian N L Olivers, Vrije Universiteit Amsterdam), The University of Manchester
 </p>
 </li>
 <li><p>Yaosi Hu (2023), The Hong Kong Polytechnic University
