--- a/students.html
+++ b/students.html
@@ -87,7 +87,7 @@
 <li><p>Yangjun Ou (2021), Wuhan Textile University
 </p>
 </li>
-<li><p>Aoqi Li (2022, co-supervised with Prof. Jeremy M. Wolfe, Harvard U. and Prof. Christian N L Olivers, Vrije Universiteit Amsterdam), The University of Manchester
+<li><p>Aoqi Li (2022, co-supervised with Prof. Jeremy M. Wolfe, Harvard U. and Prof. Christian N L Olivers, Vrije U. Amsterdam), The University of Manchester
 </p>
 </li>
 <li><p>Yaosi Hu (2023), The Hong Kong Polytechnic University
