--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Director, <a href="http://iip.whu.edu.cn" target=&ldquo;blank&rdquo;>WHU-RS Inst
 Director, <a href="http://iip.whu.edu.cn" target=&ldquo;blank&rdquo;>Joint RS-CS Lab. for Intelligent Information Processing</a><br />
 <br />
 E-Mail: <i>zzchen</i> [AT] whu [DOT] edu [DOT] cn<br />
-Office: Rm. 420, No.5 Building, Info. Sciences Campus, Wuhan University, China
+Office: Room 1006, Teaching and Experiments Building, Info. Sciences Campus, Wuhan University, China
 </p>
 </td></tr></table>
 <h2>Announcement</h2>
