--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <table class="imgtable"><tr><td>
 <a href="http://iip.whu.edu.cn/~zzchen/"><img src="bio.jpeg" alt="alt text" width="160px" height="160px" /></a>&nbsp;</td>
 <td align="left"><p>Professor, <a href="http://rsgis.whu.edu.cn" target=&ldquo;blank&rdquo;>School of Remote Sensing and Info. Engineering</a>, <a href="http://www.whu.edu.cn" target=&ldquo;blank&rdquo;>Wuhan University</a><br />
-Adjuct Professor, <a href="http://cs.whu.edu.cn" target=&ldquo;blank&rdquo;>School of Computer Science</a>, <a href="http://www.whu.edu.cn" target=&ldquo;blank&rdquo;>Wuhan University</a><br />
+Adjunct Professor, <a href="http://cs.whu.edu.cn" target=&ldquo;blank&rdquo;>School of Computer Science</a>, <a href="http://www.whu.edu.cn" target=&ldquo;blank&rdquo;>Wuhan University</a><br />
 Director, <a href="http://iip.whu.edu.cn" target=&ldquo;blank&rdquo;>WHU-RS Institute of Artificial Intelligence and Machine Perception</a><br />
 Director, <a href="http://iip.whu.edu.cn" target=&ldquo;blank&rdquo;>Joint RS-CS Lab. for Intelligent Information Processing</a><br />
 <br />
