--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <div class="menu-item"><a href="fyp.html">FYP</a></div>
 <div class="menu-category">Misc</div>
 <div class="menu-item"><a href="http://iip.whu.edu.cn/">实验室中文主页</a></div>
+<div class="menu-item"><a href="https://docs.qq.com/form/page/DQkZ3eXhRVHNFTVpr">硕士研究生申请</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -44,9 +45,9 @@ Office: Room 1006, Teaching and Experiments Building, Info. Sciences Campus, Wuh
 </p>
 <p>[Ph.D. Application, updated on 2023/11/24] For applications, please send your application via: <a href="https://docs.qq.com/form/page/DQllCRExkYXJseVZk" target=&ldquo;blank&rdquo;>Ph.D. Applications</a>.
 </p>
-<p>[M.Sc./M.Eng Application, updated on 2023/10/01] For applications, please send your application via: <a href="https://docs.qq.com/form/page/DQkZ3eXhRVHNFTVpr" target=&ldquo;blank&rdquo;>MSc/MEng Applications</a>.
-</p>
 <p>[UROP, all-year-round] For Undergraduate Research Opportunities Program applications, please send your application via: <a href="https://docs.qq.com/form/page/DQlFXanBiVkp1TGxC" target=&ldquo;blank&rdquo;>UROP Applications</a>.</p>
+<p>[硕士研究生申请, 2024/01/14] 申请链接: <a href="https://docs.qq.com/form/page/DQkZ3eXhRVHNFTVpr" target=&ldquo;blank&rdquo;>MSc/MEng Applications</a>.
+</p>
 <div id="footer">
 <div id="footer-text">
 Page generated 2023, by a modified version of <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
