--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 <div class="menu-item"><a href="fyp.html">FYP</a></div>
 <div class="menu-category">Misc</div>
 <div class="menu-item"><a href="http://iip.whu.edu.cn/">实验室中文主页</a></div>
+<div class="menu-item"><a href="index.html">PostDoc Positions/博士后职位</a></div>  
+<div class="menu-item"><a href="https://docs.qq.com/form/page/DQllCRExkYXJseVZk">博士研究生申请</a></div>
 <div class="menu-item"><a href="https://docs.qq.com/form/page/DQkZ3eXhRVHNFTVpr">硕士研究生申请</a></div>
+<div class="menu-item"><a href="https://docs.qq.com/form/page/DQlFXanBiVkp1TGxC">本科实习生申请</a></div>  
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -41,13 +44,10 @@ Office: Room 1006, Teaching and Experiments Building, Info. Sciences Campus, Wuh
 </p>
 </td></tr></table>
 <h2>Announcement</h2>
-<p>[International Research Opportunities] In collaborations with <a href="https://www.ntu-cap.org/" target=&ldquo;blank&rdquo;>CAP research group</a> of Nanyang Technological University, Singapore, we are seeking qualified Postdoctoral research fellows, Ph.D. students, and undergraduate research interns, to work on Interpretable Machine Learning.
-</p>
-<p>[Ph.D. Application, updated on 2023/11/24] For applications, please send your application via: <a href="https://docs.qq.com/form/page/DQllCRExkYXJseVZk" target=&ldquo;blank&rdquo;>Ph.D. Applications</a>.
-</p>
-<p>[UROP, all-year-round] For Undergraduate Research Opportunities Program applications, please send your application via: <a href="https://docs.qq.com/form/page/DQlFXanBiVkp1TGxC" target=&ldquo;blank&rdquo;>UROP Applications</a>.</p>
-<p>[硕士研究生申请, 2024/01/14] 申请链接: <a href="https://docs.qq.com/form/page/DQkZ3eXhRVHNFTVpr" target=&ldquo;blank&rdquo;>MSc/MEng Applications</a>.
-</p>
+<p>[Postdoc Fellowship Opportunities, all-year-round] We are seeking qualified Postdoctoral candidates, to apply for the <a href="https://www.whu.edu.cn/info/1118/174554.htm" target=&ldquo;blank&rdquo;>Wuhan University Hongyi Postdoc Fellowship (“弘毅博士后”计划)</a> to work on Multimodality Machine Learning. Please send me the CV via Email, if interested.</p>
+<p>[Ph.D. Application/博士研究生申请, 2024/2/8] For applications, please send your application via: <a href="https://docs.qq.com/form/page/DQllCRExkYXJseVZk" target=&ldquo;blank&rdquo;>Ph.D. Application</a>.</p>
+<p>[Master Application/硕士研究生申请, 2024/02/8] For applications, please send your application via:: <a href="https://docs.qq.com/form/page/DQkZ3eXhRVHNFTVpr" target=&ldquo;blank&rdquo;>MSc/MEng Application</a>.</p>
+<p>[UROP/本科实习生申请, all-year-round] For applications, please send your application via: <a href="https://docs.qq.com/form/page/DQlFXanBiVkp1TGxC" target=&ldquo;blank&rdquo;>UROP Application</a>.</p>
 <div id="footer">
 <div id="footer-text">
 Page generated 2023, by a modified version of <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
