--- a/publications.html
+++ b/publications.html
@@ -67,7 +67,7 @@
 </li>
 </ol>
 </div></div>
-<p><a href="http://www.informatik.uni-trier.de/~ley/pers/hd/c/Chen:Zhenzhong" target=&ldquo;blank&rdquo;>Full list of publications</a>.<br />
+<p><a href="https://dblp.org/pid/07/954.html" target=&ldquo;blank&rdquo;>Full list of publications</a>.<br />
 </p>
 <div id="footer">
 <div id="footer-text">
