--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@ Office: Room 1006, Teaching and Experiments Building, Info. Sciences Campus, Wuh
 </p>
 </td></tr></table>
 <h2>Announcement</h2>
-<p>[Postdoc Fellowship Opportunities, all-year-round] We are seeking qualified Postdoctoral candidates, to apply for the <a href="https://www.whu.edu.cn/info/1118/174554.htm" target=&ldquo;blank&rdquo;>Wuhan University Hongyi Postdoc Fellowship (“弘毅博士后”计划)</a> to work on Multimodality Machine Learning. Please send me the CV via Email, if interested.</p>
-<p>[Ph.D. Application/博士研究生申请, 2024/2/8] For applications, please send your application via: <a href="https://docs.qq.com/form/page/DQllCRExkYXJseVZk" target=&ldquo;blank&rdquo;>Ph.D. Application</a>.</p>
-<p>[Master Application/硕士研究生申请, 2024/02/8] For applications, please send your application via:: <a href="https://docs.qq.com/form/page/DQkZ3eXhRVHNFTVpr" target=&ldquo;blank&rdquo;>MSc/MEng Application</a>.</p>
-<p>[UROP/本科实习生申请, all-year-round] For applications, please send your application via: <a href="https://docs.qq.com/form/page/DQlFXanBiVkp1TGxC" target=&ldquo;blank&rdquo;>UROP Application</a>.</p>
+<p>[Postdoc Fellowship Opportunities/博士后招聘, all-year-round] We are seeking qualified Postdoctoral candidates, to apply for the <a href="https://www.whu.edu.cn/info/1118/174554.htm" target=&ldquo;blank&rdquo;>Wuhan University Hongyi Postdoc Fellowship (“弘毅博士后”计划)</a> to work on image processing and computer vision. The annual salary is RMB300K~400K. Please send me the CV via Email, if interested.</p>
+<p>[Ph.D. Application/博士研究生申请, 2024/04/06] Please send your application via: <a href="https://docs.qq.com/form/page/DQllCRExkYXJseVZk" target=&ldquo;blank&rdquo;>Ph.D. Application</a>.</p>
+<p>[Master Application/硕士研究生申请, 2024/04/06] Please send your application via: <a href="https://docs.qq.com/form/page/DQkZ3eXhRVHNFTVpr" target=&ldquo;blank&rdquo;>MSc/MEng Application</a>.</p>
+<p>[UROP/本科实习生申请, all-year-round] Please send your application via: <a href="https://docs.qq.com/form/page/DQlFXanBiVkp1TGxC" target=&ldquo;blank&rdquo;>UROP Application</a>.</p>
 <div id="footer">
 <div id="footer-text">
 Page generated 2023, by a modified version of <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
