--- a/students.html
+++ b/students.html
@@ -34,15 +34,6 @@
 </div>
 <h2>Current PhD students</h2>
 <ul>
-<li><p>Han Zhu (2020 -)
-</p>
-</li>
-<li><p>Jiayi Xie (2021 - , co-supervised with Prof. Gao Cong, NTU)
-</p>
-</li>
-<li><p>Huairui Wang (2021 - )
-</p>
-</li>
 <li><p>Hongchen Wei (2023 -)
 </p>
 </li>
@@ -98,6 +89,15 @@
 </p>
 </li>
 <li><p>Guangjie Ren (2023), Tencent
+</p>
+</li>
+<li><p>Han Zhu (2024)，Tencent
+</p>
+</li>
+<li><p>Huairui Wang (2024)，Tencent
+</p>
+</li>
+<li><p>Jiayi Xie (2024, co-supervised with Prof. Gao Cong, NTU)，ByteDance
 </p>
 </li>
 </ol>
