--- a/students.html
+++ b/students.html
@@ -91,13 +91,13 @@
 <li><p>Guangjie Ren (2023), Tencent
 </p>
 </li>
-<li><p>Han Zhu (2024)，Tencent
+<li><p>Han Zhu (2024), Tencent
 </p>
 </li>
-<li><p>Huairui Wang (2024)，Tencent
+<li><p>Huairui Wang (2024), Tencent
 </p>
 </li>
-<li><p>Jiayi Xie (2024, co-supervised with Prof. Gao Cong, NTU)，ByteDance
+<li><p>Jiayi Xie (2024, co-supervised with Prof. Gao Cong, NTU), ByteDance
 </p>
 </li>
 </ol>
