--- a/students.html
+++ b/students.html
@@ -34,16 +34,16 @@
 </div>
 <h2>Current PhD students</h2>
 <ul>
-<li><p>Hongchen Wei (2023 -)
-</p>
-</li>
-<li><p>Yuantong Zhang (2023 -)
-</p>
-</li>
 <li><p>Jing Yi (2020 - , co-supervised with Prof. Yonggang Wen, NTU)
 </p>
 </li>
 <li><p>Junxi Zhang (2022 -)
+</p>
+</li>
+<li><p>Hongchen Wei (2023 -)
+</p>
+</li>
+<li><p>Yuantong Zhang (2023 -)
 </p>
 </li>
 <li><p>Wenzhuo Ma (2024 -)
@@ -64,7 +64,7 @@
 <li><p>Wanjie Sun (2020), Wuhan University
 </p>
 </li>
-<li><p>Yiming Li (2020), Tencent
+<li><p>Yiming Li (2020), Tencent (Top Tech Talent Program)
 </p>
 </li>
 <li><p>Wei Wu (2021), Alibaba
@@ -73,7 +73,7 @@
 <li><p>Xiaoying Ding (2021, co-supervised with Prof. Weisi Lin, NTU), Zhongnan University of Economics and Law
 </p>
 </li>
-<li><p>Zizheng Liu (2021), Tencent
+<li><p>Zizheng Liu (2021), Tencent (Top Tech Talent Program)
 </p>
 </li>
 <li><p>Feiyang Liu (2021), Baidu
@@ -88,13 +88,13 @@
 <li><p>Yaosi Hu (2023), The Hong Kong Polytechnic University
 </p>
 </li>
-<li><p>Guangjie Ren (2023), Tencent
+<li><p>Guangjie Ren (2023), Tencent (Top Tech Talent Program)
 </p>
 </li>
-<li><p>Han Zhu (2024), Tencent
+<li><p>Han Zhu (2024), Tencent (Qingyun Plan)
 </p>
 </li>
-<li><p>Huairui Wang (2024), Tencent
+<li><p>Huairui Wang (2024), Tencent (Qingyun Plan)
 </p>
 </li>
 <li><p>Jiayi Xie (2024, co-supervised with Prof. Gao Cong, NTU), ByteDance
