--- a/students.html
+++ b/students.html
@@ -64,7 +64,7 @@
 <li><p>Wanjie Sun (2020), Wuhan University
 </p>
 </li>
-<li><p>Yiming Li (2020), Tencent (Top Tech Talent Program)
+<li><p>Yiming Li (2020), Tencent (Top Tech Talent Program, 技术大咖)
 </p>
 </li>
 <li><p>Wei Wu (2021), Alibaba
@@ -73,7 +73,7 @@
 <li><p>Xiaoying Ding (2021, co-supervised with Prof. Weisi Lin, NTU), Zhongnan University of Economics and Law
 </p>
 </li>
-<li><p>Zizheng Liu (2021), Tencent (Top Tech Talent Program)
+<li><p>Zizheng Liu (2021), Tencent (Top Tech Talent Program, 技术大咖)
 </p>
 </li>
 <li><p>Feiyang Liu (2021), Baidu
@@ -88,13 +88,13 @@
 <li><p>Yaosi Hu (2023), The Hong Kong Polytechnic University
 </p>
 </li>
-<li><p>Guangjie Ren (2023), Tencent (Top Tech Talent Program)
+<li><p>Guangjie Ren (2023), Tencent (Top Tech Talent Program, 技术大咖)
 </p>
 </li>
-<li><p>Han Zhu (2024), Tencent (Qingyun Plan)
+<li><p>Han Zhu (2024), Tencent (Qingyun Plan, 青云计划)
 </p>
 </li>
-<li><p>Huairui Wang (2024), Tencent (Qingyun Plan)
+<li><p>Huairui Wang (2024), Tencent (Qingyun Plan, 青云计划)
 </p>
 </li>
 <li><p>Jiayi Xie (2024, co-supervised with Prof. Gao Cong, NTU), ByteDance
