--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Office: Room 1006, Teaching and Experiments Building, Info. Sciences Campus, Wuh
 <h2>Announcement</h2>
 <p>[Ph.D. Application/博士研究生申请, 2024/09/01更新] Please send your application via: <a href="https://docs.qq.com/form/page/DQllCRExkYXJseVZk" target=&ldquo;blank&rdquo;>Ph.D. Application</a>.</p>
 <p>[Master Application/硕士研究生申请, 2024/08/01更新] Please send your application via: <a href="https://docs.qq.com/form/page/DQkZ3eXhRVHNFTVpr" target=&ldquo;blank&rdquo;>MSc/MEng Application</a>.</p>
-<p>[UROP/本科实习生申请, 2024/08/01更新] Please send your application via: <a href="https://docs.qq.com/form/page/DQlFXanBiVkp1TGxC" target=&ldquo;blank&rdquo;>UROP Application</a>. If you have any questions, you could submit your questions first here: <a href="https://docs.qq.com/form/page/DQlFXanBiVkp1TGxC" target=&ldquo;blank&rdquo;>Q & A</a>﻿</p>
+<p>[UROP/本科实习生申请, 2024/08/01更新] Please send your application via: <a href="https://docs.qq.com/form/page/DQlFXanBiVkp1TGxC" target=&ldquo;blank&rdquo;>UROP Application</a>. If you have any questions, you could submit your questions first here: <a href="https://docs.qq.com/sheet/DQllTWlRtZW91VmN2?tab=BB08J2" target=&ldquo;blank&rdquo;>Q & A</a>﻿</p>
 <p>[Postdoc Fellowship Opportunities/博士后招聘, 2024/08/01更新] We are seeking qualified Postdoctoral candidates, to apply for the <a href="https://www.whu.edu.cn/info/1118/174554.htm" target=&ldquo;blank&rdquo;>Wuhan University Hongyi Postdoc Fellowship (“弘毅博士后”计划)</a> to work on image processing and computer vision. The annual salary is RMB300K~400K. Please send me the CV via Email, if interested.</p>
 <div id="footer">
 <div id="footer-text">
