--- a/students.html
+++ b/students.html
@@ -91,10 +91,10 @@
 <li><p>Guangjie Ren (2023), Tencent (Top Tech Talent Program, 技术大咖)
 </p>
 </li>
-<li><p>Han Zhu (2024), Tencent (Qingyun Plan, 青云计划)
+<li><p>Han Zhu (2024), Tencent (Qingyun Program, 青云计划)
 </p>
 </li>
-<li><p>Huairui Wang (2024), Tencent (Qingyun Plan, 青云计划)
+<li><p>Huairui Wang (2024), Tencent (Qingyun Program, 青云计划)
 </p>
 </li>
 <li><p>Jiayi Xie (2024, co-supervised with Prof. Gao Cong, NTU), ByteDance
