--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Office: Room 1006, Teaching and Experiments Building, Info. Sciences Campus, Wuh
 <p>[Master Application/硕士研究生申请, 2024/08/01更新] Please send your application via: <a href="https://docs.qq.com/form/page/DQkZ3eXhRVHNFTVpr" target=&ldquo;blank&rdquo;>MSc/MEng Application</a>.</p>
 <p>[UROP/本科实习生申请, 2024/08/01更新] Please send your application via: <a href="https://docs.qq.com/form/page/DQlFXanBiVkp1TGxC" target=&ldquo;blank&rdquo;>UROP Application</a>. If you have any questions, you could submit your questions first here: <a href="https://docs.qq.com/sheet/DQllTWlRtZW91VmN2?tab=BB08J2" target=&ldquo;blank&rdquo;>Q & A</a>﻿</p>
 <p>[FRANK-ZERO 38B, 2025/03/13] We are releasing <a href="http://iip.whu.edu.cn/frank/index.html">FRANK-ZERO 38B</a>, a multimodal reasoning model, that achieves an accuracy of 74.1% on the MathVista test-mini benchmark, surpassing the closed-source OpenAI o1 model (73.9%). </p>
-<p><a href="http://iip.whu.edu.cn/frank/index.html"><img src="demo.gif" alt="alt text" /></a>&nbsp;</td></p>
+<p><a href="http://iip.whu.edu.cn/frank/index.html"><img src="frank-zero.gif" alt="alt text" /></a></p>
 <div id="footer">
 <div id="footer-text">
 Page generated 2023, by a modified version of <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
