--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@ Office: Room 1006, Teaching and Experiments Building, Info. Sciences Campus, Wuh
 </p>
 </td></tr></table>
 <h2>Announcement</h2>
+
+<p>[Ph.D. Application/博士研究生申请, 2025/05/07更新] 现招收科研博士（摄影测量与遥感专业，学博）1名，请发送电子邮件申请，或 Please send your application via: <a href="https://docs.qq.com/form/page/DQllCRExkYXJseVZk" target=&ldquo;blank&rdquo;>Ph.D. Application</a>.</p>
+
 <p>[Hongyi Postdoc Fellowship Opportunities/弘毅博士后招聘, 2025/03/13] We are seeking qualified Postdoctoral candidates, to apply for the <a href="https://rsb.whu.edu.cn/info/1182/28151.htm" target=&ldquo;blank&rdquo;>Wuhan University Hongyi Postdoc Fellowship (“弘毅博士后”计划)</a> to work on MLLM. The annual salary is RMB300K~400K, exclusive project bonus. Please send me the CV via Email, if interested.</p>
-<p>[Ph.D. Application/博士研究生申请, 2024/09/01更新] Please send your application via: <a href="https://docs.qq.com/form/page/DQllCRExkYXJseVZk" target=&ldquo;blank&rdquo;>Ph.D. Application</a>.</p>
 <p>[Master Application/硕士研究生申请, 2024/08/01更新] Please send your application via: <a href="https://docs.qq.com/form/page/DQkZ3eXhRVHNFTVpr" target=&ldquo;blank&rdquo;>MSc/MEng Application</a>.</p>
 <p>[UROP/本科实习生申请, 2024/08/01更新] Please send your application via: <a href="https://docs.qq.com/form/page/DQlFXanBiVkp1TGxC" target=&ldquo;blank&rdquo;>UROP Application</a>. If you have any questions, you could submit your questions first here: <a href="https://docs.qq.com/sheet/DQllTWlRtZW91VmN2?tab=BB08J2" target=&ldquo;blank&rdquo;>Q & A</a>﻿</p>
 <p>[FRANK-ZERO 38B, 2025/03/13] We are releasing <a href="https://github.com/CLabIIP/FRANK-ZERO">FRANK-ZERO 38B</a>, a multimodal reasoning model, that achieves an accuracy of 74.1% on the MathVista test-mini benchmark, surpassing the closed-source OpenAI o1 model (73.9%). </p>
