--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Office: Room 1006, Teaching and Experiments Building, Info. Sciences Campus, Wuh
 </td></tr></table>
 <h2>Announcement</h2>
 
-<p><span style="color: rgb(255, 0, 0);"><strong>[Ph.D. Application/博士研究生申请, 2025/05/07更新] 现招收科研专项博士（摄影测量与遥感专业，学博）1名，请发送电子邮件申请，或 Please send your application via: <a href="https://docs.qq.com/form/page/DQllCRExkYXJseVZk" target=&ldquo;blank&rdquo;>Ph.D. Application</a>.</strong></span></p>
+<p><span style="color: rgb(255, 0, 0);"><strong>[Ph.D. Application/博士研究生申请, 2025/05/07更新] 现招收25级科研专项博士（摄影测量与遥感专业，学博）1名，请发送电子邮件申请，或 Please send your application via: <a href="https://docs.qq.com/form/page/DQllCRExkYXJseVZk" target=&ldquo;blank&rdquo;>Ph.D. Application</a>.</strong></span></p>
 
 <p>[Hongyi Postdoc Fellowship Opportunities/弘毅博士后招聘, 2025/03/13] We are seeking qualified Postdoctoral candidates, to apply for the <a href="https://rsb.whu.edu.cn/info/1182/28151.htm" target=&ldquo;blank&rdquo;>Wuhan University Hongyi Postdoc Fellowship (“弘毅博士后”计划)</a> to work on MLLM. The annual salary is RMB300K~400K, exclusive project bonus. Please send me the CV via Email, if interested.</p>
 <p>[Master Application/硕士研究生申请, 2024/08/01更新] Please send your application via: <a href="https://docs.qq.com/form/page/DQkZ3eXhRVHNFTVpr" target=&ldquo;blank&rdquo;>MSc/MEng Application</a>.</p>
