--- a/students.html
+++ b/students.html
@@ -34,9 +34,7 @@
 </div>
 <h2>Current PhD students</h2>
 <ul>
-<li><p>Jing Yi (2020 - , co-supervised with Prof. Yonggang Wen, NTU)
-</p>
-</li>
+
 <li><p>Junxi Zhang (2022 -)
 </p>
 </li>
@@ -47,6 +45,12 @@
 </p>
 </li>
 <li><p>Wenzhuo Ma (2024 -)
+</p>
+</li>
+<li><p>Nianxiang Fu (2025 -)
+</p>
+</li>
+<li><p>Jingyun Liu (2025 -)
 </p>
 </li>
 </ul>
@@ -98,6 +102,9 @@
 </p>
 </li>
 <li><p>Jiayi Xie (2024, co-supervised with Prof. Gao Cong, NTU), ByteDance
+</p>
+</li>
+<li><p>Jing Yi (2025, co-supervised with Prof. Yonggang Wen, NTU), Tencent (Qingyun Program, 青云计划)
 </p>
 </li>
 </ol>
