--- a/students.html
+++ b/students.html
@@ -53,6 +53,15 @@
 <li><p>Jingyun Liu (2025 -)
 </p>
 </li>
+<li><p>Yifei Wang (2026 -)
+</p>
+</li>
+<li><p>Yanxi He (2026 -, TEE Program)
+</p>
+</li>
+<li><p>Y. Gao (incoming)
+</p>
+</li>  
 </ul>
 <h2>Former PhD students</h2>
 <ol>
@@ -118,3 +127,4 @@ Page generated 2023, by a modified version of <a href="http://jemdoc.jaboc.net/"
 </table>
 </body>
 </html>
+
